Fix some dark mode issues on mobile

--- a/modules/dt.init.less
+++ b/modules/dt.init.less
@@ -507,7 +507,7 @@ h1, h2, h3, h4, h5, h6 {
 		// The tap-highlight is an odd shape and shows even for cancelled events on -actions,
 		// just hide it.
 		-webkit-tap-highlight-color: transparent;
-		border-top: @border-width-base @border-style-base #eaecf0;
+		border-top: @border-width-base @border-style-base @border-color-muted;
 
 		h2 {
 			width: auto;
@@ -809,7 +809,7 @@ h1, h2, h3, h4, h5, h6 {
 	box-sizing: content-box;
 	color: @color-progressive;
 	background: @background-color-interactive-subtle;
-	border-top: @border-width-base @border-style-base #eaecf0;
+	border-top: @border-width-base @border-style-base @border-color-muted;
 	text-align: center;
 
 	// Match Minerva styles
